--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "symfony-bundle",
     "require": {
         "php": ">=5.3.3",
-        "symfony/framework-bundle": "~2.2",
+        "symfony/framework-bundle": ">=2.2",
         "egeloen/ckeditor-bundle": "^4.0"
     },
     "license": "MIT",
