__toString()-Fix for Sonata Admin

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "devtronic/cms-bundle",
-    "description": "A CMS Bundle for Symfony2",
-    "version": "1.0.3",
+    "description": "A CMS Bundle for Symfony3",
     "type": "symfony-bundle",
     "require": {
         "php": ">=5.3.3",
@@ -14,6 +13,9 @@
             "email": "admin@developer-heaven.de"
         }
     ],
+    "suggest": {
+        "sonata-project/admin-bundle": "For using the admins"
+    },
     "minimum-stability": "stable",
     "autoload": {
         "psr-4": { "Devtronic\\CmsBundle\\": "" }
